--- a/views/room.ejs
+++ b/views/room.ejs
@@ -5,12 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cone</title>
-    <script src="script.js"></script>
+    
     <script>
         console.log('<%=roomId%>')
     </script>
 </head>
 <body>
-    Setup
+    <div id="video-grid">
+
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
