--- a/views/room.ejs
+++ b/views/room.ejs
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clone</title>
     <link rel="stylesheet" href="style.css">
-    <script src="/socket.io/socket.io.js" defer></script>
+    <script src="/socket.io/socket.io.js"></script>
     <script>
-        console.log('<%=roomId%>')
+        const ROOM_ID='<%=roomId%>';
     </script>
 </head>
 <body>
