--- a/public/style.css
+++ b/public/style.css
@@ -20,6 +20,7 @@
     justify-content: center;
     align-items: center;
     padding: 40px;
+    overflow-y: scroll;
 }
 
 .main__controls {
@@ -102,3 +103,15 @@
     color: #CC3B33;
 }
 
+#video-grid{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    
+ }
+ video{
+    height: 300px;
+    width: 400px;
+    object-fit: cover;
+    padding: 8px;
+ }
