--- a/public/style.css
+++ b/public/style.css
@@ -20,7 +20,7 @@
     justify-content: center;
     align-items: center;
     padding: 40px;
-    overflow-y: scroll;
+    overflow-y: hidden;
 }
 
 .main__controls {
