--- a/views/room.ejs
+++ b/views/room.ejs
@@ -18,6 +18,27 @@
    
 </head>
 <body>
+   <!-- <span id="login">
+      <span id="login-name">
+         <h1>
+            Welcome to Clone
+         </h1>
+      </span>
+      
+      <br>
+      <span id="name">
+         <span id="bigText" class="bigText">
+            Enter your name
+         </span>
+         
+         <input type="text" name="name" value="" placeholder="Name">
+      </span>
+      <br>
+      <br>
+      <span id="button">
+         <button type="submit" class="btn btn-primary" onclick="EnterMeet()">Enter</button>
+      </span>
+   </span> -->
    <span id="meet">
 
       <div class="main">
