--- a/views/room.ejs
+++ b/views/room.ejs
@@ -39,6 +39,9 @@
          <button type="submit" class="btn btn-primary" onclick="EnterMeet()">Enter</button>
       </span>
    </span> -->
+   <span id="login">
+      <button type="submit" class="btn btn-primary" onclick="EnterMeet()">Enter</button>
+   </span>
    <span id="meet">
 
       <div class="main">
