--- a/views/room.ejs
+++ b/views/room.ejs
@@ -40,6 +40,11 @@
       </span>
    </span> -->
    <span id="login">
+      <span id="login-name">
+         <h1>
+            Welcome to Clone
+         </h1>
+      </span>
       <button type="submit" class="btn btn-primary" onclick="EnterMeet()">Enter</button>
    </span>
    <span id="meet">
