--- a/views/room.ejs
+++ b/views/room.ejs
@@ -45,6 +45,7 @@
             Welcome to Clone
          </h1>
       </span>
+      <input type="text">
       <button type="submit" class="btn btn-primary" onclick="EnterMeet()">Enter</button>
    </span>
    <span id="meet">
