--- a/views/room.ejs
+++ b/views/room.ejs
@@ -82,7 +82,7 @@
             </div>
          </div>
          <div class="main__right">
-         <div class="main__header">
+         <div class="main__header white-background black-color">
             <h6>Chat</h6>
          </div>
          <div class="main__chat_window">
