--- a/views/room.ejs
+++ b/views/room.ejs
@@ -81,19 +81,20 @@
                </div>
             </div>
          </div>
-         <div class="main__right">
-         <div class="main__header white-background black-color">
-            <h6>Chat</h6>
-         </div>
-         <div class="main__chat_window">
-            <ul class="messages">
-               
-            </ul>
+         <div class="main__right chat-window">
             
-         </div>
-         <div class="main__message_container">
-            <input id="chat_message" type="text" placeholder="Type message here...">
-         </div>
+            <div class="main__header white-background black-color">
+               <h6>Chat</h6>
+            </div>
+            <div class="main__chat_window">
+               <ul class="messages">
+                  
+               </ul>
+               
+            </div>
+            <div class="main__message_container">
+               <input id="chat_message" type="text" placeholder="Type message here...">
+            </div>
       </div>
    </div>
 </span>
