--- a/views/room.ejs
+++ b/views/room.ejs
@@ -81,7 +81,7 @@
                </div>
             </div>
          </div>
-         <div class="main__right chat-window">
+         <div class="main__right chat-window" id="chat-window">
             
             <div class="main__header white-background black-color">
                <h6>Chat</h6>
@@ -92,8 +92,8 @@
                </ul>
                
             </div>
-            <div class="main__message_container">
-               <input id="chat_message" type="text" placeholder="Type message here...">
+            <div class="main__message_container white-background black-color">
+               <input id="chat_message" type="text" placeholder="Type message here..." style="color:black">
             </div>
       </div>
    </div>
