--- a/views/room.ejs
+++ b/views/room.ejs
@@ -71,7 +71,7 @@
                   </div>
                   <div class="main__controls__button">
                      <i class="fas fa-comment-alt"></i>
-                     <span>Chat</span>
+                     <span onclick="hidechat()">Msgs</span>
                   </div>
                </div>
                <div class="main__controls__block">
@@ -81,12 +81,12 @@
                </div>
             </div>
          </div>
-         <div class="main__right chat-window" id="chat-window">
+         <div class="main__right chat-window" id="main_right">
             
             <div class="main__header white-background black-color">
                <h6>Chat</h6>
             </div>
-            <div class="main__chat_window">
+            <div class="main__chat_window" id="main_chat">
                <ul class="messages">
                   
                </ul>
