--- a/views/room.ejs
+++ b/views/room.ejs
@@ -31,7 +31,7 @@
             Enter your name
          </span>
          
-         <input type="text" name="name" value="" placeholder="Name">
+         <input id="username" type="text" name="name" value="" placeholder="Name">
       </span>
       <br>
       <br>
@@ -76,7 +76,7 @@
                </div>
                <div class="main__controls__block">
                   <div class="main__controls__button">
-                     <span class="leave_meeting">Leave Meeting</span>
+                     <!-- <span class="leave_meeting">Leave Meeting</span> -->
                   </div>
                </div>
             </div>
