--- a/views/room.ejs
+++ b/views/room.ejs
@@ -35,9 +35,9 @@
       </span>
       <br>
       <br>
-      <span id="button">
-         <button type="submit" class="btn btn-primary" onclick="EnterMeet()">Enter</button>
-      </span>
+      <!-- <span id="button">
+         <button type="button" class="btn btn-primary" onclick="EnterMeet()">Enter</button>
+      </span> -->
    </span>
    
    <span id="meet">
