--- a/views/room.ejs
+++ b/views/room.ejs
@@ -89,7 +89,7 @@
                
             </div>
             <div class="main__message_container white-background black-color">
-               <input id="chat_message" type="text" placeholder="Type message here..." style="color:black">
+               <input id="chat_message" type="text" placeholder="Send Messages..." style="color:black">
             </div>
          </div>
    </div>
