updated list of users in each room

--- a/views/room.ejs
+++ b/views/room.ejs
@@ -92,6 +92,9 @@
                <input id="chat_message" type="text" placeholder="Send Messages..." style="color:black">
             </div>
          </div>
+         <div class="users" id="users">
+            
+         </div>
    </div>
 </span>
 </body>
