--- a/views/room.ejs
+++ b/views/room.ejs
@@ -61,7 +61,7 @@
                      <i class="fas fa-shield-alt"></i>
                      <span>Security</span>
                   </div>
-                  <div class="main__controls__button">
+                  <div class="main__controls__button" onclick="showUsers()">
                      <i class="fas fa-user-friends"></i>
                      <span>Participants</span>
                   </div>
@@ -93,7 +93,13 @@
             </div>
          </div>
          <div class="users" id="users">
-            
+            <div class="veryBigText">
+               People in Room
+            </div>
+            <br>
+            <div class="userlist" id="userlist">
+
+            </div>
          </div>
    </div>
 </span>
