--- a/views/room.ejs
+++ b/views/room.ejs
@@ -93,8 +93,8 @@
             </div>
          </div>
          <div class="users" id="users">
-            <div class="veryBigText">
-               People in Room
+            <div class="veryBigText" style="text-align:center">
+               People
             </div>
             <br>
             <div class="userlist" id="userlist">
