--- a/public/style.css
+++ b/public/style.css
@@ -37,6 +37,7 @@ body{
 
 .main__controls {
     color: #D2D2D2;
+    background-color: rgb(54, 47, 47);
     display: flex;
     justify-content: space-between;
     padding: 5px;
@@ -54,6 +55,7 @@ body{
     padding: 8px 10px;
     min-width: 80px;
     cursor: pointer;
+    margin: 0px 50px;
 }
 
 .main__controls__button:hover {
