copy link added🤩

--- a/views/room.ejs
+++ b/views/room.ejs
@@ -57,7 +57,7 @@
                      <span>Stop Video</span>
                   </div>
                
-                  <div class="main__controls__button">
+                  <div class="main__controls__button" onclick="copyURL()">
                      <i class="fas fa-shield-alt"></i>
                      <span>Security</span>
                   </div>
@@ -102,6 +102,10 @@
             </div>
          </div>
    </div>
+</span>
+
+<span class="copyURL" id="copyURL">
+
 </span>
 </body>
 </html>
