--- a/views/room.ejs
+++ b/views/room.ejs
@@ -57,10 +57,7 @@
                      <span>Stop Video</span>
                   </div>
                
-                  <div class="main__controls__button" onclick="copyURL()">
-                     <i class="fas fa-shield-alt"></i>
-                     <span>Security</span>
-                  </div>
+                  
                
                   <div class="main__controls__button" onclick="showUsers()">
                      <i class="fas fa-user-friends"></i>
@@ -70,7 +67,10 @@
                      <i class="fas fa-comment-alt"></i>
                      <span>Msgs</span>
                   </div>
-               
+                  <div class="main__controls__button" onclick="copyURL()">
+                     <i class="fas fa-copy"></i>
+                     <span>Copy Link</span>
+                  </div>
                   <div class="main__controls__button">
                      <!-- <span class="leave_meeting">Leave Meeting</span> -->
                   </div>
@@ -80,7 +80,7 @@
          <div class="main__right chat-window" id="main_right">
             
             <div class="main__header white-background black-color">
-               <h6>Chat</h6>
+               <h5>Chat</h5>
             </div>
             <div class="main__chat_window" id="main_chat">
                <ul class="messages">
