--- a/views/room.ejs
+++ b/views/room.ejs
@@ -48,7 +48,8 @@
             <div class="main__controls">
                <div class="main__controls__block">
                   <div onclick="muteUnmute()" class="main__controls__button main__mute_button">
-                     <i class="fas fa-microphone"></i>
+                     <i class="fas fa-headset"></i>
+                     
                      <span>Mute</span>
                   </div>
                
