--- a/views/room.ejs
+++ b/views/room.ejs
@@ -61,7 +61,7 @@
                   
                
                   <div class="main__controls__button" onclick="showUsers()">
-                     <i class="fas fa-user-friends"></i>
+                     <i class="fas fa-users"></i>
                      <span>Participants</span>
                   </div>
                   <div class="main__controls__button"  onclick="hidechat()">
