--- a/public/style.css
+++ b/public/style.css
@@ -1,165 +1,161 @@
-body{
-    background-color: aqua;
+body {
+  background-color: aqua;
 }
 .main {
-    height: 100vh;
-    display: flex;
+  height: 100vh;
+  display: flex;
 }
 
 .main__left {
-    flex: 0.8;
-    display: flex;
-    flex-direction: column;
+  flex: 0.8;
+  display: flex;
+  flex-direction: column;
 }
 
 .main__right {
-    flex: 0.2
+  flex: 0.2;
 }
 
 .main__videos {
-    flex-grow: 1;
-    background-color: rgb(34, 36, 36);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 40px;
-    overflow-y: hidden;
+  flex-grow: 1;
+  background-color: rgb(34, 36, 36);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 40px;
+  overflow-y: hidden;
 }
 
 .main__controls {
-    background-color: #1C1E20;
+  background-color: #1c1e20;
 }
 
 .main__right {
-    background-color: #242324;
-    border-left: 1px solid #3D3D42;
+  background-color: #242324;
+  border-left: 1px solid #3d3d42;
 }
 
 .main__controls {
-    color: #D2D2D2;
-    background-color: rgb(54, 47, 47);
-    display: flex;
-    justify-content: space-between;
-    padding: 5px;
+  color: #d2d2d2;
+  background-color: rgb(54, 47, 47);
+  display: flex;
+  justify-content: space-evenly;
+  
 }
 
 .main__controls__block {
-    display: flex;
+  display: flex;
 }
 
 .main__controls__button {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 8px 10px;
-    min-width: 80px;
-    cursor: pointer;
-    margin: 0px 50px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 8px 10px;
+  min-width: 80px;
+  cursor: pointer;
+  margin: 0px 50px;
 }
 
 .main__controls__button:hover {
-    background-color: #6e4545;
-    border-radius: 5px;
+  background-color: #6e4545;
+  border-radius: 5px;
 }
 
 .main__controls__button i {
-    font-size: 24px;
+  font-size: 24px;
 }
 
 .main__right {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 .main__header {
-    padding-top: 5px;
-    color: #F5F5F5;
-    text-align: center;
+  padding-top: 5px;
+  color: #f5f5f5;
+  text-align: center;
 }
-.white-background{
-    background-color: white;
+.white-background {
+  background-color: white;
 }
-.black-color{
-    color:black;
+.black-color {
+  color: black;
 }
 .main__chat_window {
-    flex-grow: 1;
-    overflow-y: auto;
-    background-color: white;
-    
+  flex-grow: 1;
+  overflow-y: auto;
+  background-color: white;
 }
-#users{
-    display: flex;
-    flex-direction: column;
-    overflow-y:auto ;
-    
-    
+#users {
+  display: flex;
+  flex-direction: column;
+  overflow-y: auto;
 }
-.messages{
-    color: black;
-    list-style: none;
+.messages {
+  color: black;
+  list-style: none;
 }
 
 .main__message_container {
-    padding: 22px 12px;
-    display: flex;
+  padding: 22px 12px;
+  display: flex;
 }
 
 .main__message_container input {
-    flex-grow: 1;
-    background-color: transparent;
-    border: none;
-    color: #F5F5F5;
+  flex-grow: 1;
+  background-color: transparent;
+  border: none;
+  color: #f5f5f5;
 }
 
 .leave_meeting {
-    color: #EB534B;
+  color: #eb534b;
 }
 
-.unmute, .stop {
-    color: #CC3B33;
+.unmute,
+.stop {
+  color: #cc3b33;
 }
 
-#video-grid{
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    
- }
- video{
-    height: 300px;
-    width: 400px;
-    object-fit: cover;
-    padding: 8px;
- }
- #login {
-    
-    width: 400px;
-	height: 200px;
-	
-	position: absolute;
-	top:0;
-	bottom: 0;
-	left: 0;
-	right: 0;
-  	
-	margin: auto;
+#video-grid {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
 }
- #meet{
-     display:none;
- }
+video {
+  height: 300px;
+  width: 400px;
+  object-fit: cover;
+  padding: 8px;
+}
+#login {
+  width: 400px;
+  height: 200px;
 
- .bigText{
-    font-size:large;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+
+  margin: auto;
 }
-.veryBigText{
-    font-size: larger;
-    font-weight: bolder;
+#meet {
+  display: none;
 }
-#centered{
-    text-align: center;
+
+.bigText {
+  font-size: large;
 }
-#copyURL{
-    display:none;
+.veryBigText {
+  font-size: larger;
+  font-weight: bolder;
+}
+#centered {
+  text-align: center;
+}
+#copyURL {
+  display: none;
 }
