fixed users adding in list due to msg

--- a/views/room.ejs
+++ b/views/room.ejs
@@ -31,7 +31,7 @@
             Enter your name
          </span>
          
-         <input id="username" type="text" name="name" value="" placeholder="Name">
+         <input id="username" type="text" name="name" value="" placeholder="Name" onKeyDown="if(event.keyCode==13) newUserAdd();">
       </span>
       
    </span>
