--- a/views/room.ejs
+++ b/views/room.ejs
@@ -3,7 +3,7 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Document</title>
+   <title>Meet</title>
    <script>
       const ROOM_ID = "<%= roomId %>"
    </script>
@@ -21,7 +21,7 @@
    <span id="login">
       <span id="login-name">
          <h1>
-            Welcome to Clone
+            Welcome to Meet
          </h1>
       </span>
       
