--- a/views/room.ejs
+++ b/views/room.ejs
@@ -48,13 +48,13 @@
             <div class="main__controls">
                <div class="main__controls__block">
                   <div onclick="muteUnmute()" class="main__controls__button main__mute_button">
-                     <i class="fas fa-headset"></i>
+                     <i class="unmute fas fa-headset"></i>
                      
                      <span>Mute</span>
                   </div>
                
                   <div onclick="playStop()" class="main__controls__button main__video_button" >
-                     <i class="fas fa-video"></i>
+                     <i class="stop fas fa-video-slash"></i>
                      <span>Stop Video</span>
                   </div>
                
@@ -72,9 +72,9 @@
                      <i class="fas fa-copy"></i>
                      <span>Copy Link</span>
                   </div>
-                  <div class="main__controls__button">
-                     <!-- <span class="leave_meeting">Leave Meeting</span> -->
-                  </div>
+                  <!-- <div class="main__controls__button">
+                     <span class="leave_meeting">Leave Meeting</span>
+                  </div> -->
                </div>
             </div>
          </div>
