update icon name

--- a/views/meet.ejs
+++ b/views/meet.ejs
@@ -50,12 +50,12 @@
                   <div onclick="muteUnmute()" class="main__controls__button main__mute_button">
                      <i class="unmute fas fa-headset"></i>
                      
-                     <span>Mute</span>
+                     <span>Unmute</span>
                   </div>
                
                   <div onclick="playStop()" class="main__controls__button main__video_button" >
                      <i class="stop fas fa-video-slash"></i>
-                     <span>Stop Video</span>
+                     <span>Play Video</span>
                   </div>
                
                   
