--- a/views/meet.ejs
+++ b/views/meet.ejs
@@ -90,6 +90,8 @@
                
             </div>
             <div class="main__message_container white-background black-color">
+               <!-- <i class="fas fa-meh-blank adjust"></i> -->
+               <i class="far fa-meh-blank adjust"></i>
                <input id="chat_message" type="text" placeholder="Send Messages..." style="color:black">
             </div>
          </div>
