random emoji sender added😂🤩😭😡👍

--- a/views/meet.ejs
+++ b/views/meet.ejs
@@ -91,7 +91,7 @@
             </div>
             <div class="main__message_container white-background black-color">
                <!-- <i class="fas fa-meh-blank adjust"></i> -->
-               <i class="far fa-meh-blank adjust"></i>
+               <i class="far fa-meh-blank adjust" onclick="showEmoji()"></i>
                <input id="chat_message" type="text" placeholder="Send Messages..." style="color:black">
             </div>
          </div>
