--- a/public/style.css
+++ b/public/style.css
@@ -93,7 +93,7 @@ body {
   flex-direction: column;
   overflow-y: auto;
   word-wrap: break-word;
-
+  background-color:rgb(241, 236, 236);
 }
 .messages {
   color: black;
