--- a/views/meet.ejs
+++ b/views/meet.ejs
@@ -84,7 +84,7 @@
                <h5>Chat</h5>
             </div>
             <div class="main__chat_window" id="main_chat">
-               <ul class="messages">
+               <ul class="messages" id="messages">
                   
                </ul>
                
@@ -100,9 +100,9 @@
                People
             </div>
             <br>
-            <div class="userlist" id="userlist">
+            <ul class="userlist" id="userlist">
 
-            </div>
+            </ul>
          </div>
    </div>
 </span>
