--- a/views/meet.ejs
+++ b/views/meet.ejs
@@ -80,8 +80,12 @@
          </div>
          <div class="main__right chat-window" id="main_right">
             
-            <div class="main__header white-background black-color">
-               <h5>Chat</h5>
+            <div class="main__header white-background black-color padding-bottom">
+               <span class="heading" id="heading">Chat</span>
+               <span id="right-align">
+
+                  <i class="fas fa-times" onclick="hidechat()"></i>
+               </span>
             </div>
             <div class="main__chat_window" id="main_chat">
                <ul class="messages" id="messages">
