--- a/public/style.css
+++ b/public/style.css
@@ -191,3 +191,11 @@ right-padding{
 padding-bottom{
   padding-bottom:15px;
 }
+hr{
+  display: block;
+  height: 1px;
+  border: 0;
+  border-top: 1px solid #ccc;
+  margin: 1em 0;
+ 
+}
