video remove bugs removed

--- a/public/style.css
+++ b/public/style.css
@@ -126,7 +126,10 @@ body {
 #video-grid {
   display: flex;
   justify-content: center;
+  align-items:center;
   flex-wrap: wrap;
+  flex-grow: 1;
+  overflow-y:auto;
 }
 video {
   height: 300px;
