--- a/views/meet.ejs
+++ b/views/meet.ejs
@@ -73,9 +73,9 @@
                      <i class="fas fa-copy"></i>
                      <span>Copy Link</span>
                   </div>
-                  <!-- <div class="main__controls__button">
-                     <span class="leave_meeting">Leave Meeting</span>
-                  </div> -->
+                  <div class="main__controls__button">
+                     <span class="leave_meeting" onclick="endmeet()">Leave Meeting</span>
+                  </div>
                </div>
             </div>
          </div>
@@ -104,6 +104,7 @@
          <div class="users" id="users">
             <div class="veryBigText" style="text-align:center">
                People
+               <hr>
             </div>
             <br>
             <ul class="userlist" id="userlist">
