--- a/views/bye.ejs
+++ b/views/bye.ejs
@@ -10,14 +10,21 @@
    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
    <script src="/socket.io/socket.io.js" defer></script>
-   <link rel="stylesheet" href="style.css">
+   <link rel="stylesheet" href="/bye.css">
    <script src="https://kit.fontawesome.com/c939d0e917.js"></script>
-   <script src="script.js" defer></script>
+   <script src="/bye.js" defer></script>
    
 </head>
-<body>
+<body onload="byeFunction()">
     <span class="end" id="end">
-        You Left the Meeting.
+        <span class="end-text">
+
+            You Left the Meeting
+        </span>
+        <br>
+        <button type="button" class="btn btn-primary" onclick="Rejoin()">Rejoin</button>
+        <button type="button" class="btn btn-primary" onclick="anotherRoom()">Leave</button>
+   
     </span>
 
 </body>
