--- a/public/style.css
+++ b/public/style.css
@@ -93,7 +93,7 @@ body {
   flex-direction: column;
   overflow-y: auto;
   word-wrap: break-word;
-  background-color:rgb(241, 236, 236);
+  background-color: rgb(241, 236, 236);
 }
 .messages {
   color: black;
@@ -126,10 +126,10 @@ body {
 #video-grid {
   display: flex;
   justify-content: center;
-  align-items:center;
+  align-items: center;
   flex-wrap: wrap;
   flex-grow: 1;
-  overflow-y:auto;
+  overflow-y: auto;
 }
 video {
   height: 300px;
@@ -166,47 +166,44 @@ video {
 #copyURL {
   display: none;
 }
-.people{
+.people {
   padding-left: 10px;
   padding-right: 10px;
-
 }
-right-padding{
+right-padding {
   padding-right: 10px;
   margin-right: auto;
 }
-.adjust{
+.adjust {
   padding: 12px 10px;
   background-color: rgb(255, 255, 248);
 }
-#right-align{
+#right-align {
   float: right;
-  
 }
-.right-align{
-  float:right;
+.right-align {
+  float: right;
 }
-.heading{
-  font-size:large;
+.heading {
+  font-size: large;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: bold;
   padding-bottom: 15px;
   margin-bottom: 15px;
   text-decoration: underline;
 }
-padding-bottom{
-  padding-bottom:15px;
+padding-bottom {
+  padding-bottom: 15px;
 }
-hr{
+hr {
   display: block;
   height: 1px;
   border: 0;
   border-top: 1px solid #ccc;
   margin: 1em 0;
- 
 }
 .red-color {
-  color:red;
+  color: red;
 }
 
 /* #large-icon{
@@ -226,6 +223,7 @@ hr{
 
 /* The actual popup */
 .popup .popuptext {
+  
   visibility: hidden;
   width: 160px;
   background-color: #555;
@@ -261,15 +259,23 @@ hr{
 
 /* Add animation (fade in the popup) */
 @-webkit-keyframes fadeIn {
-  from {opacity: 0;} 
-  to {opacity: 1;}
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 @keyframes fadeIn {
-  from {opacity: 0;}
-  to {opacity:1 ;}
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
-#largeText{
+#largeText {
   font-family: Georgia, serif;
 }
 .btn {
@@ -297,4 +303,71 @@ hr{
   background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
   background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
   text-decoration: none;
+}
+
+.open-button {
+  background-color: #555;
+  color: white;
+  padding: 16px 20px;
+  border: none;
+  cursor: pointer;
+  opacity: 0.8;
+  position: fixed;
+  bottom: 23px;
+  right: 28px;
+  width: 280px;
+}
+
+/* The popup form - hidden by default */
+.form-popup {
+  display: none;
+  position: fixed;
+  bottom: 0;
+  right: 15px;
+  border: 3px solid #f1f1f1;
+  z-index: 9;
+}
+
+/* Add styles to the form container */
+.form-container {
+  max-width: 300px;
+  padding: 10px;
+  background-color: white;
+}
+
+/* Full-width input fields */
+.form-container input[type=text], .form-container input[type=password] {
+  width: 100%;
+  padding: 15px;
+  margin: 5px 0 22px 0;
+  border: none;
+  background: #f1f1f1;
+}
+
+/* When the inputs get focus, do something */
+.form-container input[type=text]:focus, .form-container input[type=password]:focus {
+  background-color: #ddd;
+  outline: none;
+}
+
+/* Set a style for the submit/login button */
+.form-container .btn {
+  background-color: #04AA6D;
+  color: white;
+  padding: 16px 20px;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+  margin-bottom:10px;
+  opacity: 0.8;
+}
+
+/* Add a red background color to the cancel button */
+.form-container .cancel {
+  background-color: red;
+}
+
+/* Add some hover effects to buttons */
+.form-container .btn:hover, .open-button:hover {
+  opacity: 1;
 }
