copy icon added

--- a/views/meet.ejs
+++ b/views/meet.ejs
@@ -87,8 +87,10 @@
                   <div class="main__controls__button" id="copy-link" onclick="copyURL(); openForm()">
                      <i class="fas fa-copy"></i>
                      <span>
-                        Copy Link
-                        <span id="copytext">Copied Link</span>
+                        Copy
+                        <span id="copytext" style="float: right;">
+                           <i class="fas fa-check-circle"></i>
+                        </span>
                      </span>
                   </div>
                   <div class="main__controls__button"  onclick="endmeet()">
