--- a/views/meet.ejs
+++ b/views/meet.ejs
@@ -49,9 +49,9 @@
          <div class="main__left" id="main__left">
             <div class="main__videos">
                <div id="video-grid">
-                     <!-- <video class="screen-share" id="screen-share">
+                     <video class="screen-share" id="screen-share" autoplay muted>
 
-                     </video> -->
+                     </video>
                </div>
             </div>
             <div class="main__controls">
