--- a/views/meet.ejs
+++ b/views/meet.ejs
@@ -75,11 +75,11 @@
                      <span>Participants</span>
                      
                   </div>
-                  <!-- <div class="main__controls__button" onclick="shareScreen()">
+                  <div class="main__controls__button" onclick="shareScreen()">
                      <i class="fas fa-share"></i>
-                     <span>Screen Share</span>
+                     <span>Screen</span>
                      
-                  </div> -->
+                  </div>
                   <div class="main__controls__button"  onclick="hidechat()">
                      <i class="fas fa-comment-alt"></i>
                      <span>Msgs</span>
