update home page

--- a/views/meet.ejs
+++ b/views/meet.ejs
@@ -35,11 +35,9 @@
       </span>
       <br>
       <br>
-
+      <span id="nullLength"></span>
       <button class="btn" onclick="newUserAdd();"> Join meet</button>
-      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
       
-      <button class="btn"  onclick="newUserAdd();"> Join Anonymous</button>
       
    </span>
    
