--- a/views/meet.ejs
+++ b/views/meet.ejs
@@ -73,7 +73,7 @@
                      <span>Participants</span>
                      
                   </div>
-                  <div class="main__controls__button" onclick="shareScreen()">
+                  <div class="main__controls__button" id="screenShare" onclick="shareScreen()">
                      <i class="fas fa-share"></i>
                      <span>Screen</span>
                      
